Word wrap fix for paragraph and mobile scaling for hamburger menu items

--- a/src/components/miscellaneous/ParagraphContentPanel.css
+++ b/src/components/miscellaneous/ParagraphContentPanel.css
@@ -60,6 +60,7 @@ body {
   padding-right: 5%;
   padding-bottom: 20px;
   padding-top: 20px;
+  overflow-wrap: break-word;
 }
 
 @media only screen and (max-width: 950px) {
